[gd_scene load_steps=8 format=2]

[ext_resource path="res://RawResources/Graphics/person.png" type="Texture" id=1]
[ext_resource path="res://Resources/ResourceText.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/ResourceArea.gd" type="Script" id=3]
[ext_resource path="res://RawResources/Graphics/wood_ico.png" type="Texture" id=4]
[ext_resource path="res://RawResources/Graphics/food_ico.png" type="Texture" id=5]
[ext_resource path="res://RawResources/Graphics/coin_ico.png" type="Texture" id=6]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[node name="ResourceArea" type="Node2D"]
script = ExtResource( 3 )

[node name="PeopleIcon" type="Sprite" parent="."]
position = Vector2( 0, -6 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="FoodIcon" type="Sprite" parent="."]
position = Vector2( 0, 34 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="WoodIcon" type="Sprite" parent="."]
position = Vector2( 0, 74 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="GoldIcon" type="Sprite" parent="."]
position = Vector2( 0, 114 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="APIcon" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 154 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="PeopleCount" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = -20.0
margin_right = 1304.0
margin_bottom = 300.0
rect_scale = Vector2( 0.1, 0.1 )
theme = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "12345 [color=#113399](+5)[/color]"
text = "12345 (+5)"
scroll_active = false

[node name="FoodCount" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 20.0
margin_right = 1304.0
margin_bottom = 340.0
rect_scale = Vector2( 0.1, 0.1 )
theme = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "12345 [color=#113399](+5)[/color]"
text = "12345 (+5)"
scroll_active = false

[node name="WoodCount" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 60.0
margin_right = 1304.0
margin_bottom = 380.0
rect_scale = Vector2( 0.1, 0.1 )
theme = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "12345 [color=#113399](+5)[/color]"
text = "12345 (+5)"
scroll_active = false

[node name="GoldCount" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 100.0
margin_right = 1304.0
margin_bottom = 420.0
rect_scale = Vector2( 0.1, 0.1 )
theme = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "12345 [color=#113399](+5)[/color]"
text = "12345 (+5)"
scroll_active = false

[node name="APCount" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 140.0
margin_right = 1304.0
margin_bottom = 460.0
rect_scale = Vector2( 0.1, 0.1 )
theme = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "12345 [color=#113399](+5)[/color]"
text = "12345 (+5)"
scroll_active = false
